--- a/src/Components/Searchbar_header/SearchBarHeader.css
+++ b/src/Components/Searchbar_header/SearchBarHeader.css
@@ -14,6 +14,7 @@ img{
     background-color: #FF4500;
     border-radius: 20px;
     padding: 30px;
+    box-shadow: 6px 6px 12px rgb(15, 15, 15);
 }
 
 .search{
